Fix spacing and alignment

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ th {
 .menu {
     background-color: #000053;
     padding: 10px;
+    text-align: center;
 }
 
 .menu a {
